Modified and added generators

--- a/generators/controller/controller.coffee.hbs
+++ b/generators/controller/controller.coffee.hbs
@@ -1,2 +1,2 @@
-module.exports = {{#camelize}}{{name}}{{/camelize}}Controller = Em.ObjectController.extend
+module.exports = App.{{#camelize}}{{name}}{{/camelize}}Controller = Em.ObjectController.extend
   content: null
