--- a/generators/model/model.coffee.hbs
+++ b/generators/model/model.coffee.hbs
@@ -1,2 +1,2 @@
-module.exports = {{#camelize}}{{name}}{{/camelize}} = DS.Model.extend
+module.exports = App.{{#camelize}}{{name}}{{/camelize}} = DS.Model.extend
   myAttribute: DS.attr('string')
